# ai-coding-playground

./: .gitignore  README.md
projects/ffmpeg-go-relay/: .tmux.conf  AICAGE_SETUP.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  SISYPHUS_SETUP.md  config.example.json  coverage.out  docker-compose.yml  go.mod  go.sum  interactive-feedback  prometheus.yml  sisyphus-wrapper.sh  start-dev-session.sh  start-ultimate-dev.sh
projects/ffmpeg-go-relay/.github/workflows/: ci.yml
projects/ffmpeg-go-relay/cmd/interactive-feedback/: main.go
projects/ffmpeg-go-relay/cmd/relay/: main.go
projects/ffmpeg-go-relay/internal/auth/: token.go  token_test.go
projects/ffmpeg-go-relay/internal/circuit/: breaker.go  breaker_test.go
projects/ffmpeg-go-relay/internal/config/: config.go  config_test.go  duration.go  duration_test.go
projects/ffmpeg-go-relay/internal/httpserver/: server.go
projects/ffmpeg-go-relay/internal/logger/: logger.go  logger_test.go
projects/ffmpeg-go-relay/internal/metrics/: metrics.go
projects/ffmpeg-go-relay/test/: benchmark_test.go  integration_test.go  rtmp_auth_test.go
projects/ffmpeg-rust-port/: Cargo.toml  PORTING_PLAN.md  README.md
projects/ffmpeg-rust-port/src/: error.rs  lib.rs  main.rs
projects/ffmpeg-rust-port/src/core/: audio.rs  mod.rs
projects/ffmpeg-rust-port/src/decoder/: mod.rs  symphonia.rs
projects/ffmpeg-rust-port/src/encoder/: mod.rs  wav.rs
projects/ffmpeg-rust-port/src/filter/: mod.rs  normalize.rs  remix.rs  resample.rs
projects/ffmpeg-rust-port/src/processor/: mod.rs  segment.rs
(+34 files in other folders)
